--- a/playground/composer.json
+++ b/playground/composer.json
@@ -12,16 +12,7 @@
         }
     ],
     "require": {
-        "affinidi/affinidi-php-tdk": "dev-main",
-        "vlucas/phpdotenv": "^5.6"
-    },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../",
-            "options": {
-                "symlink": true
-            }
-        }
-    ]
+        "vlucas/phpdotenv": "^5.6",
+        "affinidi/affinidi-php-tdk": "^1.0"
+    }
 }
