--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "monolog/monolog": "^3.7",
     "ramsey/uuid": "^4.7"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "autoload": {
     "psr-4": {
       "Affinidi\\": "src/"
